--- a/Landing/css/index.css
+++ b/Landing/css/index.css
@@ -1,4 +1,5 @@
 @import url("../css/awesome.css");
+@import url("../css/price.css");
 
 * {
     margin: 0;
@@ -12,7 +13,7 @@
 .container {
     max-width: 1170px;
     margin: auto;
-    padding: 80px 0;
+    
 }
 
 .title {
@@ -22,4 +23,19 @@
     font-family: 'Raleway';
     font-weight: 400;
     margin-bottom: 34px;
+}
+
+.description {
+    font-family: 'Open Sans';
+    font-weight: 400;
+    font-size: 14px;
+    color:  #86878B;
+    text-align: center;
+}
+
+.line {
+    height: 2px;
+    width: 64px;
+    border-top: 1px solid #E72424;
+    margin: 0 auto 34px;
 }
