--- a/Landing/css/awesome.css
+++ b/Landing/css/awesome.css
@@ -2,38 +2,28 @@
     
 }
 
-.container {
+#awesome__container {
 
-    
 }
 
-.line {
-    height: 2px;
-    width: 64px;
-    border-top: 1px solid #E72424;
-    margin: 0 auto 34px;
-    
-}
-
-.description {
-    font-family: 'Open Sans';
-    font-weight: 400;
-    font-size: 14px;
-    color:  #86878B;
-    text-align: center;
+#awesome__description {
     margin-bottom: 68px;
 }
 
 .awesome__wrap {
     display:flex;
     justify-content: space-between;
+    margin: 0 -15px;
     font-family: 'Raleway';
     font-weight: 400;
     font-style: normal;
+    flex-wrap: wrap;
 }
 
 .card {
     justify-content: center;
+    margin: 0 15px;
+    width: 350px;
 }
 
 .card__content {
@@ -69,7 +59,6 @@
 }
 
 .card__text {
-    width: 350px;
     font-size: 14px;
     font-weight: 400;
     font-family: "Open Sans";
