--- a/Landing/css/index.css
+++ b/Landing/css/index.css
@@ -1,4 +1,12 @@
 @import url("../css/awesome.css");
+@import url("../css/price.css");
+@import url("../css/customers.css");
+@import url("../css/azure.css");
+@import url("../css/header.css");
+@import url("../css/social.css");
+@import url("../css/footer.css");
+@import url("../css/main-screen.css");
+@import url("../css/contact-us.css");
 
 * {
     margin: 0;
@@ -8,11 +16,16 @@
     text-decoration: none;
   }
 
+section {
+    padding: 80px 0;
+}
 
 .container {
     max-width: 1170px;
     margin: auto;
-    padding: 80px 0;
+    padding: 0 15px;
+    
+    
 }
 
 .title {
@@ -23,3 +36,21 @@
     font-weight: 400;
     margin-bottom: 34px;
 }
+
+.title::after {
+    content: "";
+    display: block;
+    height: 2px;
+    width: 64px;
+    border-top: 1px solid #E72424;
+    margin: 34px auto;
+}
+
+.description {
+    font-family: 'Open Sans';
+    font-weight: 400;
+    font-size: 14px;
+    color:  #86878B;
+    text-align: center;
+}
+
